Closed Bug 1669270 Opened 4 years ago Closed 4 years ago

nsHttpTransaction::OnProxyConnectComplete cannot be called for websocket over h2

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox83 --- fixed

People

(Reporter: kershaw, Assigned: kershaw)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

Accidentally found that OnProxyConnectComplete is called when websocket is over h2.

This needs to be fixed.

I will try to rebase this patch: https://phabricator.services.mozilla.com/D43213

That should handle this issue as well.

Actually, tih is a separate issue.

(In reply to Dragana Damjanovic [:dragana] from comment #2)

Actually, tih is a separate issue.

Yes, this bug is only about not messing up the mProxyConnectResponseCode in transaction. I'll upload a simple patch to fix this.

Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bb508faf0d84
Don't call OnProxyConnectComplete if it's websocket over h2 r=necko-reviewers,dragana
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: