Bug 1669270 - Don't call OnProxyConnectComplete if it's websocket over h2 r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D92494